...
    }];

    
    //标题
    CGFloat titleLabelH = self.titleLabel.font.pointSize+2;
    if (settingItemModel.onlyTitle) {
        if ([settingItemModel.title isEqualToString:@"退出登录"]) {
            self.titleLabel.font = CYTFontWithPixel(36.f);
            self.titleLabel.textAlignment = NSTextAlignmentCenter;
            titleLabelH = self.titleLabel.font.pointSize+2;
            [self.titleLabel makeConstraints:^(MASConstraintMaker *make) {
                make.center.equalTo(self.contentView);
                make.left.right.equalTo(self.contentView);
...
