...
    if (!_headView) {
        _headView = [CYTSourceAndFindCarSearchHeadView new];
        @weakify(self);
        [_headView setClearBlock:^{
            @strongify(self);
            dispatch_async(dispatch_get_main_queue(), ^{
                UIAlertView *alert = [[UIAlertView alloc] initWithTitle:@"提示" message:@"确定删除?" delegate:nil cancelButtonTitle:@"取消" otherButtonTitles:@"确定", nil];
                [[alert rac_buttonClickedSignal] subscribeNext:^(id x) {
                    if ([x integerValue]==1) {
                        //删除数据，然后更新UI
                        [self.viewModel clearHistoryData];
                        [self.mainView.tableView reloadData];
                        self.mainView.tableView.tableHeaderView = nil;
...
