...
        self.needRefresh = YES;
    }];
    
    [CYTTools updateNavigationBarWithController:self showBackView:NO showLine:NO];
    self.ffTitle = @"我";
    self.ffNavigationView.contentView.rightView.titleColor = kFFColor_title_L2;
    [self.ffNavigationView showRightItemWithTitle:@"设置"];
}

- (void)viewDidAppear:(BOOL)animated {
    [super viewDidAppear:animated];
    if (self.needRefresh) {
        self.needRefresh = NO;
...
